--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "dependencies": {
         "eslint": "^6.8.0",
         "eslint-plugin-react": "^7.18.0",
-        "jest": "^24.9.0",
-        "client": "npm start --prefix client"
-
+        "jest": "^24.9.0"
 
     },
     "devDependencies": {}
